@@ -10,6 +10,8 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added Featured Image thumbnail to standard post-format archive views
 * Moved `featured_image` wrapper into OpusPrimusGallery::featured_image method
 * Moved `secondary_images` wrapper into OpusPrimusGallery::secondary_images method
+* Moved the ellipsis out of the read more link
+* Removed unused parameter `$more` from `OpusPrimusPosts::excerpt_more_link` method
 * Removed `$sep_location` parameter as it was not used in `browser_title` method
 * Removed Featured Image thumbnail from index view
 * Set `show_page_byline` to true as theme author aesthetic choice
